--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   qr: ^2.1.0
   flutter_launcher_icons: ^0.9.3
   getwidget: ^3.0.1
+  flutter_advanced_drawer: ^1.3.2
 
 flutter_icons:
   image_path: "assets/icons/app-icon.png"
