--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,14 +36,20 @@ dependencies:
   cupertino_icons: ^1.0.2
   qr_flutter: ^4.0.0
   qr: ^2.1.0
-  flutter_launcher_icons: ^0.9.3
   getwidget: ^3.0.1
   flutter_advanced_drawer: ^1.3.2
+  icons_launcher: ^1.2.1
 
 flutter_icons:
-  image_path: "assets/icons/app-icon.png"
-  android: true
+  image_path: 'assets/icons/app-icon.png'
+  remove_alpha_ios: false
+  remove_alpha_macos: false
   ios: false
+  android: true
+  macos: false
+  windows: false
+  linux: true
+  web: true
 
 dev_dependencies:
   flutter_test:
