--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   getwidget: ^3.0.1
   flutter_advanced_drawer: ^1.3.2
   icons_launcher: ^1.2.1
+  flutter_bloc: ^8.1.1
 
 flutter_icons:
   image_path: 'assets/icons/app-icon.png'
