--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_advanced_drawer: ^1.3.2
   icons_launcher: ^1.2.1
   flutter_bloc: ^8.1.1
+  bloc_test: ^9.1.0
 
 flutter_icons:
   image_path: 'assets/icons/app-icon.png'
