--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   icons_launcher: ^1.2.1
   flutter_bloc: ^8.1.1
   bloc_test: ^9.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 flutter_icons:
   image_path: 'assets/icons/app-icon.png'
