--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   bloc_test: ^9.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  hive_generator: ^1.1.3
 
 flutter_icons:
   image_path: 'assets/icons/app-icon.png'
@@ -58,6 +59,7 @@ flutter_icons:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
