--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^1.1.3
+  objectdb: ^1.2.1+1
 
 flutter_icons:
   image_path: 'assets/icons/app-icon.png'
